# pscom

./: .gitignore  .travis.yml  Makefile.in  README.md  aclocal.m4  configure  configure.ac  pscom_bin_examples_mqtt_makefile  pscom_bin_mqtt_makefile
doc/: Makefile.in
include/: Makefile.in  pscom.h  psport4.h
lib/: Makefile.am  Makefile.in
lib/p4tcp/: Makefile.in
lib/pscom/: Makefile.am  Makefile.in  pscom.c  pscom_con.c  pscom_con.h  pscom_env.c  pscom_env.h  pscom_io.c  pscom_io.h  pscom_listener.c  pscom_migrate.c  pscom_migrate.h  pscom_ondemand.c  pscom_plugin.c  pscom_plugin.h  pscom_priv.h  pscom_shm.c  pscom_sock.c  pscom_str_util.c  pscom_tcp.c  pscom_ufd.c  psivshmem_malloc.c
lib/pscom4dapl/: Makefile.in
lib/pscom4elan/: Makefile.in
lib/pscom4extoll/: Makefile.in
lib/pscom4gm/: Makefile.in
lib/pscom4ivshmem/: Makefile.am  Makefile.in  metadata.h  pscom_ivshmem.c  pscom_ivshmem.h  psivshmem.c  psivshmem.h
lib/pscom4ivshmem/direct_mode/: psivshmem_malloc.c  psivshmem_malloc.h  psmallocivshmem.c
lib/pscom4mxm/: Makefile.in
lib/pscom4ofed/: Makefile.in
lib/pscom4openib/: Makefile.in  pscom_openib.c  psoib.c  psoib.h
lib/pscom4psm/: Makefile.in
lib/pscom4ucp/: Makefile.in
lib/pscom4velo/: Makefile.in
lib/psmalloc/: Makefile.in
lib/psmalloc4ivshmem/: Makefile.am  Makefile.in  psmallocivshmem.c
lib/psmalloc4ivshmem/.deps/: libpsmalloc_la-psmalloc.Plo
lib/psport4/: Makefile.in
scripts/: Makefile.in  config.guess  config.sub
